# Eat-The-Strawberries

./: Cargo.toml
levels/: level.lvl
resources/character/: CharacterSpriteSheet.xcf
resources/materials/: materials_spritesheet.xcf
src/: main.rs
src/game/: mod.rs  world.rs  world2.rs
src/game/states/: editor.rs  menu.rs  mod.rs  play.rs
src/game/world/: material.rs
src/game/world2/: material2.rs
src/utils/: animation.rs  collision.rs  mod.rs  save.rs  shape.rs  spritesheet.rs
