[package]
name = "Eat-The-Strawberries"
version = "0.1.0"
authors = ["deadlap <llabildgaard@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kondi = {git = "https://github.com/deadlap/kondi", branch = "master"}
bincode = "1"
log = "0.4"
byteorder = "1"
lazy_static = "1"
serde_derive = "1"
serde = "1"
ggez = "0.5.1"
toml = "0.5"

[dependencies.nalgebra]
version = "0.23"
features = ["mint", "serde-serialize"]